<resources>
    <string name="app_name">MyScheduler</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">一覧表示</string>
    <string name="second_fragment_label">カレンダー</string>
    <string name="next">カレンダーへ</string>
    <string name="previous">戻る</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scheduleEdit">スケジュール編集</string>
    <string name="dateEditHit">日付</string>
    <string name="timeEditHint">時間</string>
    <string name="titleEditHint">タイトル</string>
    <string name="titleEditText">文字を消して空欄にする</string>
    <string name="detailEditHint">詳細</string>
    <string name="dateButton">日付選択</string>
    <string name="timeButton">時間選択</string>
    <string name="saveButton">保存</string>
    <string name="deleteButton">削除</string>
</resources>